[metadata]
name = akshare-pdf-reporter
version = 1.0.0
author = AI Quant Tools
author_email = aiquants@proton.me
description = Generate professional PDF technical analysis reports for Chinese A-share stocks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/www31582/stock-pdf-reporter
project_urls =
    Bug Tracker = https://github.com/www31582/stock-pdf-reporter/issues
    Buy Me a Coffee = https://buymeacoffee.com/aiquants
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Office/Business :: Financial
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Financial and Insurance Industry

[options]
py_modules = stock_report
python_requires = >=3.8
install_requires =
    akshare>=1.0.0
    fpdf2>=2.5.0
    matplotlib>=3.5.0
    pandas>=1.4.0
    numpy>=1.21.0

[options.entry_points]
console_scripts =
    stock-report = stock_report:main